Refactor : 팔오우, 팔로잉 목록 조회 DTO 수정